test/lambda/negative/semantic/reserved_last_keyword.ls
// @expect-error: E201
// @description: last is reserved for subscript and limit clauses

let last = 1
